force-app/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <label>Feedback</label>
    <nameField><displayFormat>F-{0000}</displayFormat><label>Feedback</label><trackHistory>false</trackHistory><type>AutoNumber</type><startingNumber>0</startingNumber></nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>