force-app/main/default/objects/Feedback__c/fields/Comments__c.field-meta.xml
<CustomField><fullName>Comments__c</fullName><externalId>false</externalId><label>Comments</label><length>32768</length><required>false</required><trackTrending>false</trackTrending><type>LongTextArea</type><visibleLines>6</visibleLines></CustomField>