force-app/main/default/objects/Feedback__c/fields/Event__c.field-meta.xml
<CustomField><fullName>Event__c</fullName><externalId>false</externalId><label>Event</label><required>false</required><trackTrending>false</trackTrending><type>Lookup</type><referenceTo>Event__c</referenceTo><relationshipLabel>Feedbacks</relationshipLabel><relationshipName>Feedbacks</relationshipName><deleteConstraint>SetNull</deleteConstraint><lookupFilter><active>true</active><errorMessage>Select an event that belongs to the chosen client.</errorMessage><filterItems><field>Event__c.Client__c</field><operation>equals</operation><valueField>$Source.Client__c</valueField></filterItems><isOptional>false</isOptional></lookupFilter></CustomField>