force-app/main/default/objects/Feedback__c/fields/Rating__c.field-meta.xml
<CustomField><fullName>Rating__c</fullName><externalId>false</externalId><label>Rating</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>1</fullName><default>false</default><label>1</label></value><value><fullName>2</fullName><default>false</default><label>2</label></value><value><fullName>3</fullName><default>false</default><label>3</label></value><value><fullName>4</fullName><default>false</default><label>4</label></value><value><fullName>5</fullName><default>false</default><label>5</label></value></valueSetDefinition></valueSet></CustomField>